styles.css
body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    overflow-y: auto;
    font-family: 'Montserrat', sans-serif;
}

div {
    padding: 0;
    margin: 0;
}

h1 {
    font-family: 'Pacifico', sans-serif;
    font-size: 55px;
    margin-top: 0;
    margin-bottom: 25px;
}

h2 {
    font-size: 40px;
    font-family: 'Ubuntu Light', sans-serif;
    margin: 0;
}

h3 {
    font-size: 20px;
    font-family: 'Ubuntu Light', sans-serif;
    margin: 0;
}

h4 {
    font-size: 15px;
    font-family: 'Ubuntu Light', sans-serif;
}

.bigIcon {
    font-size: 50px;
    color: #000;
    margin-right: 20px;

}

.wrap {
    position: absolute;
    width: 100%;
    height: 100%;
}

.background {
    width: 100%;
    min-height: 0;

}

.top {
    width: 100%;
    height: 100%;
    min-height: 360px;
}

.topBackground {
    width: 100vw;
    height: 100vh;
    text-align: center;
    background-image:url('images/orionMedium.jpg');
    background-repeat:no-repeat;
    background-position:center;
    background-size: cover;
    position: fixed;
    z-index: -1;
}

.topContainer {
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%); /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
    -ms-transform: translateY(-50%); /* IE 9 */
    -moz-transform: translateY(-50%);
    transform: translateY(-50%); /* IE 10, Fx 16+, Op 12.1+ */

}

.topIcon {
    text-align: center;
    position: relative;
    top: 40%;
}

.personalIcon {
    width: 30px;
    z-index: 2;
}

.name {
    text-align: center;
    width: 100%;
    font-family: 'Pacifico', sans-serif;
    font-size: 70px;
    color: white;
}

.description {
    text-align: center;
    font-size: 50px;
    font-family: 'Montserrat', sans-serif;
    color: white;
}

.innerContent {
    padding-left: 5%;
    padding-right: 5%;
    min-width: 300px;
}

.center {
    text-align: center;
}

.phone{
    position: relative;
    top: 0;
    left: 0;
    width: 300px;
}

.screenshot {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 1px;
    top: 68px;
    width: 221px;
}

table {
    table-layout: fixed;
    border-collapse: collapse;
    width: 100%;
}

td {  
    padding-bottom: 15px;
    padding-top: 15px;
}

.borderBottom {
    border-bottom: 1pt solid black;
}

.android{
    margin: auto;
}

.pebble {
    position: relative;
    top: 0;
    left: 0;
}

.pebbleOG{
    margin: auto;
}

.pebbleTime{
    margin: auto;
}

.pebbleRound{
    margin: auto;
}

.androidScreenshot{
    width: 300px;
}

.pebbleOGScreenshot{
    width: 225px;
}

.pebbleTimeScreenshot{
    width: 225px;
}

.pebbleRoundScreenshot {
    width: 225px;
}


.badge {
    height: 110px;
}

.title {
    float: left;
    margin-left: 7%;
    color: #FFFFFF;
    font-size: 25px;
    vertical-align: middle;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%); /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
    -ms-transform: translateY(-50%); /* IE 9 */
    -moz-transform: translateY(-50%);
    transform: translateY(-50%);
}



.menuimg {
    float: left;
    position: relative;
    height: 100%;
    max-width: 100%;

}

.main {
    width: 100%;
    height: 100%;
    position: absolute;
    padding-top: 5%;
    z-index: 0;
}

.container {
    margin-right: auto;
    margin-left: auto;
}

.even {
    background-color: #E1E1E1;
    padding: 50px 150px;
}

.odd {
    background-color: #ebebeb;
    padding: 50px 150px;
}


.bottom {
    text-align: center;
    width: 100%;
    background-color: #E1E1E1;
    height: 80px;
}

.bottomText {
    margin: 0;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%); /* Ch <36, Saf 5.1+, iOS, An =<4.4.4 */
    -ms-transform: translateY(-50%); /* IE 9 */
    -moz-transform: translateY(-50%);
    transform: translateY(-50%);
}


.bottomIcon {
    height: 20px;
    max-width: 100%;
}


/*WIDE SCREENS*/
@media only screen and (min-width: 1024px){
    .name{
        font-size: 84px;
        letter-spacing:6px;
    }
    .description{
        font-size: 39px;
        letter-spacing:4px;
    }
}

/*iPad*/
@media only screen and (max-width: 768px) {
    .name{
        font-size:58px;
        letter-spacing:0;
    }
    .description{
        font-size:34px;
        letter-spacing:0;
    }
}


@media only screen and (max-device-width: 480px) {
    .wrap {
        background-attachment: scroll;
    }
    .name{
        font-size: 80px;
    }
    .description{
        font-size: 60px;
    }
    h1{
        font-size: 80px;
    }
    h2 {
        font-size: 50px;
    }
    h3 {
        font-size: 35px;
    }
    .innerContent {
        padding: 0;
    }
    tr {
        display: table;
        width: 100%;
        padding-bottom: 15px;
        padding-top: 15px;
    }
    td {
        display: table-row;
        width: 100%;
    }
}

/*mobile*/
@media only screen and (max-width: 1000px) {
    tr {
        display: table;
        width: 100%;
        margin-bottom: 40px;
        margin-top: 40px;
    }
    td {
        display: table-row;
        width: 100%;
    }
}

@media only screen and (max-height: 700px) {
    #canvasIcon {
        display: none;
    }
}

